stop DB instance

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@middy/core": "^1.5.0",
     "@middy/http-json-body-parser": "^1.5.0",
+    "aws-sdk": "^2.831.0",
     "source-map-support": "^0.5.19"
   },
   "devDependencies": {
